--- a/css/base.css
+++ b/css/base.css
@@ -570,3 +570,35 @@ a:focus-visible {
 		grid-template-columns: repeat(3,auto);
 	}
 }
+
+/* Tablet styles */
+@media (max-width: 1024px) {
+    /* Styles for tablets (up to 1024px) */
+
+	#contact {
+		padding: 120px 25px;
+	}
+	#contact ul li {
+		font-size: 36px;
+		margin-bottom: 15px;
+	}
+
+	.light-bg video {
+		margin-left: 0px;
+		max-width: 45vw;
+	}
+
+	.content__text {
+		font-size: 24px;
+		max-width: 50vw;
+	}
+
+	.film-strip-wrapper {
+		margin-top: 190px;
+	}
+}
+
+/* Mobile styles */
+@media (max-width: 767px) {
+    /* Styles for mobile devices (up to 767px) */
+}
