--- a/css/base.css
+++ b/css/base.css
@@ -659,6 +659,7 @@ a:focus-visible {
 		text-align: center;
         color: #1A1515;
         font-size: 42px;
+		font-weight: 900;
         text-transform: uppercase;
         border-bottom: 2px solid #9C0f1A;
 		text-decoration: none;
